- Removed top-right social icon per CD discussion - Added hover state to fixed social sharing menu - Added smooth local scrolling to start/end arrows - Proof-of-concept globe animation - Added server-row animations - Added z-index relationship for animated content with section grids.
* Refer to bugherd for additional todos.

--- a/app/styles/sections/_globe.scss
+++ b/app/styles/sections/_globe.scss
@@ -57,3 +57,14 @@
 }
 
 
+.globe-graphic-container {
+	@include circle(965px);
+	overflow: hidden;
+	border: 1px solid red;
+	z-index: z(base-5);
+
+	img {
+		position: relative;
+		width: 1000px;
+	}
+}
